fixed list items on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -374,6 +374,11 @@ label {
     display: none;
   }
 
+  #therapies li {
+  display: block;
+  text-align: left;
+}
+
   /**------ contact ------**/
   .form {
     margin: 0 10px 10px 10px;
